AR_RU_01 : Base setup : added some more font files, fixed typos, renamed some files for better understanding

--- a/src/styles/abstracts/mixins/_breakpoints.scss
+++ b/src/styles/abstracts/mixins/_breakpoints.scss
@@ -1,4 +1,4 @@
 $phone-max-width: 430px;
 $tablet-min-width: 431px;
-$tabelet-max-width: 1024px;
+$tablet-max-width: 1024px;
 $desktop-min-width: 1025px;
