--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,8 +1,43 @@
+@use '../abstracts/variables/fonts' as *;
+
 @font-face {
-    font-family: circular-std;
-    src: url(/public/fonts/CircularStd-Medium.woff);
+    font-family: $circular-md;
+    src: url(/fonts/CircularStd-Medium.woff);
+    font-display: swap;
 }
+
 @font-face {
-    font-family: inter;
-    src: url(/public/fonts/Inter-ThinBETA.woff);
+    font-family: $inter-thin;
+    src: url(/fonts/Inter-ThinBETA.woff);
+    font-display: swap;
+}
+
+@font-face {
+    font-family: $circular-bold;
+    src: url(/fonts/CircularStd-Bold.woff);
+    font-display: swap;
+}
+
+@font-face {
+    font-family: $circular-book;
+    src: url(/fonts/CircularStd-Book.woff);
+    font-display: swap;
+}
+
+@font-face {
+    font-family: $inter-extra-light;
+    src: url(/fonts/Inter-ExtraLightBETA.woff);
+    font-display: swap;
+}
+
+@font-face {
+    font-family: $inter-light;
+    src: url(/fonts/Inter-LightBETA.woff);
+    font-display: swap;
+}
+
+@font-face {
+    font-family: $inter-regular;
+    src: url(/fonts/Inter-Regular.woff);
+    font-display: swap;
 }
