--- a/src/styles/pages/_header.scss
+++ b/src/styles/pages/_header.scss
@@ -1,27 +1,34 @@
 @use '../abstracts/variables/colors' as *;
 @use '../abstracts/variables/breakpoints' as *;
+
+.blur-overlay {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 50;
+}
+
 .header {
+    padding: 2.5rem 1rem 0 1rem;
     width: 100vw;
     display: flex;
     justify-content: space-between;
-    padding: 30px 34px;
 
     &__sidebar {
-        min-width: 30%;
-        max-width: 60%;
-        height: 100%;
+        width: 100%;
+
         position: absolute;
-        right: 34px;
-        z-index: 2;
+        right: 0;
+        z-index: 55;
         height: 100vh;
-        background-color: pink;
-        color: white;
+
         display: flex;
         justify-content: center;
         gap: 5rem;
         flex-direction: column;
         align-items: center;
         display: none;
+        // backdrop-filter: blur(10px);
     }
 
     &__placeholder {
@@ -44,21 +51,29 @@
         min-height: 1.603rem;
         display: none;
     }
+
     &__btns {
         display: none;
+        font-size: 1rem;
     }
 
     &__logo {
         font-size: 2.5rem;
-
+        text-align: center;
         background: linear-gradient(to left, $purple-color, $pink-color);
         background-clip: text;
         -webkit-text-fill-color: transparent;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     &__hamburger {
         font-size: 2.5rem;
-        z-index: 3;
+        z-index: 60;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .auth {
@@ -74,11 +89,16 @@
             border: $purple-color;
             background-color: $purple-color;
             color: white;
-            width: 7.188rem;
-            height: 3.063rem;
+            width: 7rem;
+            height: 3rem;
             border-radius: 6.25rem;
         }
     }
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 // Desktop
@@ -87,10 +107,12 @@
         display: block;
         list-style-type: none;
         display: flex;
-        gap: 7rem;
+        gap: 3rem;
+        align-items: center;
     }
 
     .header {
+        padding: 3.9rem 6.2rem 0 9.2rem;
         &__sidebar {
             display: none;
         }
@@ -100,6 +122,7 @@
         }
 
         &__nav-links {
+            font-size: 0.9rem;
             order: 2;
         }
 
@@ -109,21 +132,33 @@
 
         &__btns {
             display: block;
+
+            right: 9.2rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             order: 3;
         }
     }
 
     .auth {
-        display: block;
+        display: flex;
     }
 }
 
 //Tablet
 @media (width >= $tablet-min-width) and (width <= $tablet-max-width) {
     .header {
+        padding: 2.2rem 4.4rem 0 3.9rem;
         &__sidebar {
+            width: 60%;
             right: auto;
-            left: 34px;
+            left: 0;
+            gap: 8rem;
+        }
+        &__sidebar a:nth-child(5),
+        &__sidebar a:nth-child(6) {
+            display: none;
         }
 
         &__hamburger {
@@ -135,9 +170,13 @@
         }
 
         &__btns {
+            font-size: 0.9rem;
             display: block;
             position: absolute;
-            right: 34px;
+            right: 3.9rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         &__placeholder {
             order: 3;
