AR_RU_01: base setup : Fixes done

--- a/src/styles/abstracts/variables/_fonts.scss
+++ b/src/styles/abstracts/variables/_fonts.scss
@@ -1,8 +1,4 @@
 $circular-md: 'circular-md';
-$circular-bold: 'circular-bold';
-$circular-book: 'circular-book';
-
-$inter-extra-light: 'inter-extra-light';
-$inter-light: 'inter-light';
-$inter-regular: 'inter-regular';
-$inter-thin: 'inter-thin';
+$circular-bold1: 'circular-bold1';
+$inter: 'inter';
+$circular-bold2: 'circular-bold2';
