--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -29,9 +29,19 @@ p {
 }
 // Only for purpose of showcase of base setup
 
-.heading {
+.circular-md {
     font-size: x-large;
     font-family: $circular-md;
+}
+
+.circular-bold1 {
+    font-size: x-large;
+    font-family: $circular-bold1;
+}
+
+.circular-bold2 {
+    font-size: x-large;
+    font-family: $circular-bold2;
 }
 
 .orange {
@@ -39,7 +49,7 @@ p {
 }
 
 .sub-heading {
-    font-family: $inter-regular;
+    font-family: $inter;
     font-size: x-large;
 }
 
