--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,3 +2,44 @@
 @use 'base';
 @use 'abstracts';
 @use 'themes';
+@use 'pages';
+
+@use './abstracts/variables/' as *;
+@use './abstracts/mixins/' as *;
+// Only for purpose of showcase of base setup
+
+.circular-md {
+    font-size: x-large;
+    font-family: $circular-md;
+}
+
+.circular-bold1 {
+    font-size: x-large;
+    font-family: $circular-bold1;
+}
+
+.circular-bold2 {
+    font-size: x-large;
+    font-family: $circular-bold2;
+}
+
+.orange {
+    color: $orange-color;
+}
+
+.sub-heading {
+    font-family: $inter;
+    font-size: x-large;
+}
+
+.pink {
+    color: $pink-color;
+}
+
+.yellow {
+    color: $yellow-color;
+}
+
+.purple {
+    color: $purple-color;
+}
