AR_RU_02 : header : Rebased 02

--- a/src/styles/pages/_header.scss
+++ b/src/styles/pages/_header.scss
@@ -67,7 +67,7 @@ a div:hover {
     &__nav-links,
     &__sidebar div {
         font-size: 1rem;
-        font-family: circular-std;
+        font-family: circular-md;
         color: #19182580;
     }
 
@@ -104,7 +104,7 @@ a div:hover {
     }
 
     .auth {
-        font-family: circular-std;
+        font-family: circular-md;
         &__login {
             border: none;
             background-color: inherit;
