--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -4,3 +4,4 @@
 @include font-face($circular-md, '/fonts/CircularStd-Medium.woff');
 @include font-face($circular-bold1, '/fonts/CircularStd-Bold.woff');
 @include font-face($circular-bold2, '/fonts/CircularStd-Black.woff');
+@include font-face($inter, '/fonts/Inter-Regular.woff');
