AR_RU_01 : base setup : Improved documentaion, used color variables in icomoon, added font weight and font style to the font mixin

--- a/src/styles/abstracts/mixins/_font.scss
+++ b/src/styles/abstracts/mixins/_font.scss
@@ -1,9 +1,15 @@
-//created a mixin to create font-faces
+/// Mixin for font-face
+/// @param {string} $name
+/// Name of the font-family
+/// @param {string} $src
+/// Path of the font file.
 
-@mixin font-face($name, $src) {
+@mixin font-face($name, $src, $font-weight, $font-style) {
     @font-face {
         font-family: $name;
         src: url($src);
         font-display: swap;
+        font-weight: $font-weight;
+        font-style: $font-style;
     }
 }
