--- a/src/styles/abstracts/variables/_colors.scss
+++ b/src/styles/abstracts/variables/_colors.scss
@@ -1,4 +1,4 @@
-$purple-color: #5d50c6;
-$pink-color: #f85e9f;
-$orange-color: #ff5722;
-$yellow-color: #facd49;
+$purple: #5d50c6;
+$pink: #f85e9f;
+$orange: #ff5722;
+$yellow: #facd49;
