--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,7 +24,7 @@
 }
 
 .orange {
-    color: $orange-color;
+    color: $orange;
 }
 
 .sub-heading {
@@ -33,13 +33,13 @@
 }
 
 .pink {
-    color: $pink-color;
+    color: $pink;
 }
 
 .yellow {
-    color: $yellow-color;
+    color: $yellow;
 }
 
 .purple {
-    color: $purple-color;
+    color: $purple;
 }
