AR_RU_02 : header : added mixins, variables

--- a/src/styles/abstracts/mixins/_button.scss
+++ b/src/styles/abstracts/mixins/_button.scss
@@ -8,4 +8,6 @@
 @mixin button($border-radius: 10rem, $padding: 1.6rem 3.2rem) {
     border-radius: $border-radius;
     padding: $padding;
+    color: $color;
+    font-size: $font-size;
 }
