AR_RU_02 : header : added mixins, variables

--- a/src/styles/abstracts/mixins/_button.scss
+++ b/src/styles/abstracts/mixins/_button.scss
@@ -1,6 +1,15 @@
-@mixin button($background-color, $border-radius, $border, $padding) {
+@mixin button(
+    $background-color,
+    $border-radius,
+    $border,
+    $padding,
+    $color,
+    $font-size
+) {
     background-color: $background-color;
     border: $border;
     border-radius: $border-radius;
     padding: $padding;
+    color: $color;
+    font-size: $font-size;
 }
