AR_RU_01 : base setup : added proper documentation, more variables

--- a/src/styles/abstracts/variables/_fonts.scss
+++ b/src/styles/abstracts/variables/_fonts.scss
@@ -2,3 +2,8 @@ $circular-md: 'circular-md';
 $circular-bold1: 'circular-bold1';
 $inter: 'inter';
 $circular-bold2: 'circular-bold2';
+
+$font-weight-450: 450;
+$font-weight-400: 400;
+$font-weight-700: 700;
+$font-weight-900: 900;
