--- a/src/styles/abstracts/mixins/_font.scss
+++ b/src/styles/abstracts/mixins/_font.scss
@@ -1,8 +1,12 @@
-/// Mixin for font-face
-/// @param {string} $name
-/// Name of the font-family
-/// @param {string} $src
-/// Path of the font file.
+/* Mixin for font-face
+ @param {string} $name
+ Name of the font-family
+ @param {string} $src
+ Path of the font file.
+ @param {number} $font-weight
+ Font-weight of text
+ @param {string} $font-style
+ font-style of the text */
 
 @mixin font-face($name, $src, $font-weight, $font-style) {
     @font-face {
