--- a/src/styles/abstracts/variables/_colors.scss
+++ b/src/styles/abstracts/variables/_colors.scss
@@ -1,4 +1,6 @@
-$purple: #5d50c6;
-$pink: #f85e9f;
-$orange: #ff5722;
-$yellow: #facd49;
+$slate-blue: #5d50c6;
+$french-rose: #f85e9f;
+$outrageous-orange: hsl(14, 100%, 57%);
+$kournikova-yellow: #facd49;
+$pure-white: #ffffff;
+$pure-black: #000000;
