--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,33 +1,60 @@
 @use '../abstracts/variables/' as *;
 
-body {
-    margin: 0;
-    padding: 0;
+*,
+*::before,
+*::after {
     box-sizing: border-box;
+}
+
+html {
     font-size: 62.5%;
 }
 
-*,
-*::after,
-*::before {
-    box-sizing: inherit;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    line-height: 1.5;
 }
 
-img {
-    display: block;
-    max-width: 100%;
+ul,
+ol {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-input,
-button {
-    font: inherit;
-}
-
-p,
 h1,
 h2,
 h3,
-span {
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+    font-weight: normal;
     overflow-wrap: break-word;
-    word-wrap: break-word;
+}
+
+img,
+picture {
+    max-width: 100%;
+    display: block;
+    height: auto;
+}
+
+input,
+button,
+textarea,
+select {
+    font: inherit;
+    color: inherit;
+    background: none;
+    border: none;
+    outline: none;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
