AR_RU_01 : base setup : added more variables, using colors in icomoon fonts as per need

--- a/src/styles/abstracts/variables/_colors.scss
+++ b/src/styles/abstracts/variables/_colors.scss
@@ -1,6 +1,7 @@
 $slate-blue: #5d50c6;
 $french-rose: #f85e9f;
-$outrageous-orange: hsl(14, 100%, 57%);
+$outrageous-orange: #ff5722;
 $kournikova-yellow: #facd49;
-$pure-white: #ffffff;
-$pure-black: #000000;
+$white: #ffffff;
+$black: #000000;
+$midnight-express: #191825;
