--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,27 +1,17 @@
 @use '../abstracts/variables/' as *;
 @use '../abstracts/mixins/' as *;
 
-@include font-face(
-    $circular-md,
-    '/fonts/CircularStd-Medium.woff',
-    $font-weight-400,
-    normal
-);
+@include font-face($circular-md, $path-circular-md, $font-weight-400, normal);
 @include font-face(
     $circular-bold1,
-    '/fonts/CircularStd-Bold.woff',
-    700,
-    normal
-);
-@include font-face(
-    $circular-bold2,
-    '/fonts/CircularStd-Black.woff',
+    $path-circular-bold1,
     $font-weight-700,
     normal
 );
 @include font-face(
-    $inter,
-    '/fonts/Inter-Regular.woff',
+    $circular-bold2,
+    $path-circular-bold2,
     $font-weight-900,
     normal
 );
+@include font-face($inter, $path-inter, $font-weight-400, normal);
