--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,3 +41,16 @@
 .purple {
     color: $slate-blue;
 }
+
+.icon-play-circle5-1::before {
+    color: $slate-blue;
+}
+.icon-Vector-7::before {
+    color: $kournikova-yellow;
+}
+.icon-Group-8 .path1::before {
+    color: $slate-blue;
+}
+.icon-Group-8 .path2::before {
+    color: $white;
+}
