--- a/src/styles/pages/_header.scss
+++ b/src/styles/pages/_header.scss
@@ -54,8 +54,9 @@
             transition: 800ms;
         }
 
-        &__hamburger {
-            display: none;
+        &__auth {
+            position: absolute;
+            right: 3.2rem;
         }
 
         &__btns {
